@@ -13,6 +13,8 @@ lib/POE/Devel/Benchmarker/Imager/BasicStatistics.pm
 META.yml
 Changes
 
+examples/test.pl
+
 t/1_load.t
 
 t/a_critic.t
